--- a/wx_mn/db.yml
+++ b/wx_mn/db.yml
@@ -6,6 +6,9 @@
   - name: creat the unified dir
     shell: /bin/mkdir -p /data/shellscripts
 
+  - name: install uma_32
+    script: /data/shellscripts/J/uma_32.sh
+
   - name: copy the move_script to destination
     template: src=/data/shellscripts/J/dbservermv.sh dest=/data/shellscripts/dbservermv.sh
 
