--- a/wx_mn/combat_and_world.yml
+++ b/wx_mn/combat_and_world.yml
@@ -6,6 +6,9 @@
   - name: creat the unified dir
     command: /bin/mkdir -p /data/shellscripts
 
+  - name: install uma_32
+    script: /data/shellscripts/J/uma_32.sh
+
   - name: copy the move_script to destination
     template: src=/data/shellscripts/J/combatservermv.sh dest=/data/shellscripts/combatservermv.sh
 
